--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -5,7 +5,8 @@
     <title>Animk2</title>
     <style>
         body {
-            background: #1c1c1c
+            background: #1c1c1c;
+            overflow: hidden;
         }
     </style>
 </head>
