--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -12,6 +12,9 @@
 </head>
 
 <body>
+    <!--<object id="wtPlugin" type="application/x-wacomtabletplugin">
+      <param name="onload" value="pluginLoaded" />
+    </object>-->
     <div id="app">
     </div>
     <script>
