--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -7,6 +7,7 @@
         body {
             background: #1c1c1c;
             overflow: hidden;
+            margin: 0;
         }
     </style>
 </head>
