--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -13,6 +13,8 @@
             position: fixed;
             top:0px;
             left: 0px;
+            /*width:1000px;
+            height:1000px;*/
             width:1280px;
             height:720px;
         }
