--- a/resources/app/index.html
+++ b/resources/app/index.html
@@ -81,7 +81,7 @@
 
         // buildMenu()
     </script>
-    <script src="/resources/app/view/index.js"></script>
+    <script src="view/index.js"></script>
 </body>
 
 </html>
